[MODEXPW-528] Replace edifact pol query generation with existing utils